# TrixX

./: .env.example  CHANGELOG.md  LICENSE.md  PRIVACY.md  README.md  TOS.md  config.example.py  keep_alive.py  main.py  no..replit.example.py.md  pyproject.toml  requirements.txt  run_trixx_rewrite.txt
.ayra golden/: charbot.py  chatbot.py
.trixx/: ayra.ip
Other commands/: brawleripreset.py
bot/: PRIVACY.md  TOS.md
cogs/: BrawlCog.py  admin.py  help.py  info.py
migrations/: 03-04-2022-DB.py
